** Major update: (180328)
- Don't backup original file if backup exists.
- Now compatible with QTS 4.3.4

* Minor update: (180326)
- Changed package icon.

* Initial release: (180325)
- First public release.