@@ -23,19 +23,46 @@
 # this program. If not, see http://www.gnu.org/licenses/.
 ############################################################################
 
-FIRMWARE_VERSION="$(getcfg System Version -f /etc/config/uLinux.conf)"
-SOURCE_PATHFILE=/home/httpd/cgi-bin/apps/qpkg/css/qpkg.css
-BACKUP_PATHFILE="${SOURCE_PATHFILE}.bak"
+Init()
+    {
+
+    THIS_QPKG_NAME=HideThatBanner
+    FIRMWARE_VERSION="$(getcfg System Version -f /etc/config/uLinux.conf)"
+    SOURCE_PATHFILE=/home/httpd/cgi-bin/apps/qpkg/css/qpkg.css
+    BACKUP_PATHFILE="${SOURCE_PATHFILE}.bak"
+
+    if [[ ${FIRMWARE_VERSION//.} -lt 434 ]]; then
+        SUBSTR='s|.store_banner_area{margin-top:20px;height:180px;}|.store_banner_area{margin-top:20px;height:0px;}|;s|.banner_area .banner_img{height:175px;width:400px;}|.banner_area .banner_img{height:0px;width:400px;}|'
+    else
+        SUBSTR='s|.store_banner_area{height:200px;|.store_banner_area{height:0px;|;s|.banner_area .banner_img{height:174px;width:399px;}|.banner_area .banner_img{height:0px;width:399px;}|'
+    fi
+
+    }
+
+LogWrite()
+    {
+
+    # $1 = message to write into NAS system log
+    # $2 = event type:
+    #    0 : Information
+    #    1 : Warning
+    #    2 : Error
+
+    log_tool --append "[$THIS_QPKG_NAME] $1" --type "$2"
+
+    }
+
+Init
 
 case "$1" in
     start)
         [[ ! -e $BACKUP_PATHFILE ]] && cp "$SOURCE_PATHFILE" "$BACKUP_PATHFILE"
-
-		if [[ ${FIRMWARE_VERSION//.} -lt 434 ]]; then
-			sed -i 's|.store_banner_area{margin-top:20px;height:180px;}|.store_banner_area{margin-top:20px;height:0px;}|;s|.banner_area .banner_img{height:175px;width:400px;}|.banner_area .banner_img{height:0px;width:400px;}|' "$SOURCE_PATHFILE"
-		else
-			sed -i 's|.store_banner_area{height:200px;|.store_banner_area{height:0px;|;s|.banner_area .banner_img{height:174px;width:399px;}|.banner_area .banner_img{height:0px;width:399px;}|' "$SOURCE_PATHFILE"
-		fi
+        sed -i "$SUBSTR" "$SOURCE_PATHFILE"
+        if ! (/bin/cmp -s "$SOURCE_PATHFILE" "$BACKUP_PATHFILE"); then
+            LogWrite "App Center was patched successfully" 0
+        else
+            LogWrite "App Center was not patched! (QTS $FIRMWARE_VERSION)" 2
+        fi
         ;;
     stop)
         [[ -e $BACKUP_PATHFILE ]] && cp "$BACKUP_PATHFILE" "$SOURCE_PATHFILE"
